FIX swagger and update on profile
