# api/app/Http/Controllers/AdminSide/ProjectController.php
@@ -6,9 +6,11 @@ use App\Models\Project;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Project\StoreRequest;
+use App\Http\Requests\Project\UpdateRequest;
 use App\Http\Resources\Project\ShowResource;
 use App\Http\Resources\Project\IndexResource;
 use App\Http\Resources\Project\StoreResource;
+use App\Http\Resources\Project\UpdateResource;
 use App\Http\Resources\Project\DestroyResource;
 
 class ProjectController extends Controller
@@ -74,27 +76,83 @@ class ProjectController extends Controller
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Put(
+     *     path="/admin/projects/{id}",
+     *     tags={"AdminSide Project Model CRUD"},
+     *     operationId="updateProject",
+     *     security={
+     *          {"bearerAuth": {}}
+     *      },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *        @OA\Schema(
+     *              type="integer"
+     *        )
+     *     ),
+     *     @OA\RequestBody(
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *          @OA\Schema(
+     *              @OA\Property(
+     *                  property="name",
+     *                  type="string"
+     *                  ),
+     *                  example={
+     *                           "title": "Page1",
+     *                           "description": "Project sub title",
+     *                           "date": "2020-01-03",
+     *                           "status": "1",
+     *                           "link": "http://www.google.com",
+     *                           "image": "",
+     *                  }
+     *              )
+     *          )
+     *      ),
+     *     @OA\Response(
+     *      response=200,
+     *      description="Update resource in project.",
+     *          @OA\JsonContent(type="object",
+     *          @OA\Property(property="code", type="integer"),
+     *          @OA\Property(property="message", type="string"),
+     *          @OA\Property(property="data", type="array",
+     *          @OA\Items(type="object",
+     *                   @OA\Property(property="title", type="string"),
+     *                   @OA\Property(property="description", type="string"),
+     *                   @OA\Property(property="date", type="string"),
+     *                   @OA\Property(property="status", type="string"),
+     *                   @OA\Property(property="link", type="string"),
+     *                   @OA\Property(property="image", type="string"),
+     *                   @OA\Property(property="userId", type="integer"),
+     *                   @OA\Property(property="updated_at", type="string"),
+     *                   @OA\Property(property="created_at", type="string"),
+     *                   @OA\Property(property="id", type="integer"),
+     *                    ),
+     *                ),
+     *            ),
+     *      ),
+     *     @OA\Response(response=404, description="Not Found"),
+     *     @OA\Response(response=500, description="Token has expired | Internal Server error")
+     * )
      */
-    public function update(Request $request, int $id)
+    public function update(UpdateRequest $request, int $id)
     {
-        //
+        $project = Project::find($id);
+        $project->update($request->convertToDto()->toArray());
+        return new UpdateResource($project);
     }
 
     /**
      * @OA\Delete(
-     *     path="/admin/projects/{id}",
+     *     path="/admin/project/{id}",
      *     tags={"AdminSide Project Model CRUD"},
      *     operationId="destroyProject",
      *     security={
      *          {"bearerAuth": {}}
      *      },
      *     @OA\Parameter(
-     *         description="ID of project",
+     *         description="ID of Project",
      *         in="path",
      *         name="id",
      *         required=true,
@@ -105,7 +163,7 @@ class ProjectController extends Controller
      *     ),
      *     @OA\Response(
      *      response=200,
-     *      description="Deleted project",
+     *      description="Deleted Project",
      *          @OA\JsonContent(type="object",
      *          @OA\Property(property="code", type="integer"),
      *          @OA\Property(property="message", type="string"),
